# CPP-EASY-PROJECT

./: LICENSE.md  README.md
Qt-2048-cmake/: CMakeLists.txt  ReadMe.md  main.cpp
Qt-2048-cmake/Core/: Board.cpp  Board.h  Game.cpp  Game.h  Observer.h  Subject.cpp  Subject.h  Tile.cpp  Tile.h
Qt-2048-cmake/GUI/: GameBoard.cpp  GameBoard.h  GameOverWindow.cpp  GameOverWindow.h  LabelTile.cpp  LabelTile.h  MainWindow.h  ResetButton.cpp  ResetButton.h
Qt-Tetris-cmake/: CMakeLists.txt  ReadMe.md  main.cpp
Qt-Tetris-cmake/Core/: Board.cpp  Board.h  Game.cpp  Game.h  Observer.h  Subject.h  Tetris.cpp  Tetris.h  Tile.h
Qt-Tetris-cmake/GUI/: GameBoard.cpp  GameBoard.h  GameOverWindow.cpp  GameOverWindow.h  LabelTile.cpp  LabelTile.h  MainWindow.cpp  MainWindow.h  ResetButton.cpp  ResetButton.h
SFML-PROJECT/: readme.md
Word-Query-cmake/: ReadMe.md
Word-Query-cmake/iterator-edition/: readme.md
Word-Query-cmake/regex-edition/: readme.md
